--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/serch_result_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/serch_result_main_layout.xml
@@ -28,20 +28,109 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="キーワードを入力"
-        android:textColor="#ffffffff"/>
+        android:textColor="#ffffffff" />
 
-
-    <Button
-        android:id="@+id/bt_result1"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:id="@+id/Search_result"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="検索結果　内容１" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/bt_result2"
-        android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/Search_result_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/Search_result_iv1"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/Search_result_iv"
+            android:text="ニーナ・ドブレフ"
+            android:textColor="#FFFFFF" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:text="●"
+            android:textColor="#888888"
+            android:textSize="25sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/Search_result1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="検索結果　内容２" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/Search_result_iv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/Search_result_tv1"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/Search_result_iv2"
+            android:text="ニーナ・ドブレフ"
+            android:textColor="#FFFFFF" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:text="●"
+            android:textColor="#888888"
+            android:textSize="25sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/Search_result2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/Search_result_iv3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/Search_result_tv2"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/Search_result_iv3"
+            android:text="プリズン・ブレイク シーズン1第1話 マイケル"
+            android:textColor="#FFFFFF" />
+
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Search_result_tv2"
+            android:layout_toRightOf="@id/Search_result_iv3"
+            android:text="★★★★☆3.5"
+            android:textColor="#FFFFFF" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:text="●"
+            android:textColor="#888888"
+            android:textSize="25sp" />
+    </RelativeLayout>
+
 
     <Button
         android:id="@+id/bt_backTop2"
