--- a/dTVTerminalApp/app/src/main/res/layout/ranking/layout/weekly_tv_ranking_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/ranking/layout/weekly_tv_ranking_main_layout.xml
@@ -5,32 +5,19 @@
     style="@style/default_layout_style"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/home_main_layout_title"
+    <HorizontalScrollView
+        android:id="@+id/weekly_ranking_tab_strip_scroll"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#FF0000">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="ランキング(週間テレビランキング)"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="15sp"/>
-    </RelativeLayout>
+        android:layout_height="50dp"
+        android:background="@android:color/background_dark"
+        android:fillViewport="true"
+        android:foregroundGravity="center_horizontal"
+        android:scrollbars="none" />
 
-    <Button
-        android:id="@+id/button8"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_weekly_ranking_result"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="contentsDetailButton"
-        android:text="コンテンツ詳細" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/clip_hs_tab_strip_scroll" />
 
-    <Button
-        android:id="@+id/button11"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="clipButton"
-        android:text="クリップ" />
 </LinearLayout>
