--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_reservation_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_reservation_list_main_layout.xml
@@ -4,39 +4,32 @@
     android:layout_height="match_parent"
     android:background="#000000">
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#FF0000">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="録画予約"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="15sp"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/record_reservation_list_main_layout_ll1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/record_reservation_list_main_layout_tv1"
-            android:layout_width="wrap_content"
+            android:id="@+id/record_reservation_list_update_time"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:gravity="right"
             android:textColor="#FFFFFF"
-            android:text="8/31(木) 21:00"/>
-        <TextView
-            android:layout_below="@id/record_reservation_list_main_layout_tv1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:text="BONES シーズン11 #8 「感謝祭の秘密」"/>
+            android:text="8/31(木) 21:00 現在"/>
     </RelativeLayout>
     <View
+        android:id="@+id/record_reservation_list_border"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/record_reservation_list_update_time"
         android:background="#FFFFFF"/>
+    <ListView
+        android:id="@+id/record_reservation_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/record_reservation_list_border"
+        android:divider="@drawable/list_item_divider"
+        android:dividerHeight="1dp">
+    </ListView>
 
 </LinearLayout>
