--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
+  -->
+
 <resources>
+    <!--Common-->
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#FF0000</color>
     <color name="colorAccent">#FF4081</color>
     <color name="menuList">#000000</color>
     <color name="menuListProgramTitle">#FFFFFF</color>
+    <color name="white_text">#FFFFFF</color>
     <!-- キーワード検索 -->
     <color name="keyword_search_background">#EEEEEE</color>
     <color name="keyword_search_hint">#888888</color>
@@ -22,4 +28,7 @@
     <color name="ranking_list_border">#888888</color>
     <color name="ranking_no_text">#FFFFFF</color>
     <color name="ranking_no_background">#000000</color>
+
+    <!--コンテンツ詳細-->
+    <color name="contents_header_background">#000000</color>
 </resources>
