--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
@@ -11,8 +11,8 @@
         android:id="@+id/remote_control_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:background="@android:color/transparent">
 
         <LinearLayout
@@ -20,109 +20,96 @@
             android:layout_width="359dp"
             android:layout_height="641dp"
             android:background="@android:color/transparent"
-            android:orientation="vertical"
-            android:weightSum="641">
+            android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout
+                android:id="@+id/header_watch_by_tv"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="80"
-                android:orientation="vertical">
+                android:layout_height="80dp"
+                android:background="@drawable/remote_watch_by_tv_bottom_corner">
 
-                <FrameLayout
-                    android:id="@+id/header_watch_by_tv"
+                <LinearLayout
+                    android:id="@+id/bottom_view_ll"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="@drawable/remote_watch_by_tv_bottom_corner">
+                    android:orientation="horizontal"
+                    android:visibility="visible"
+                    android:weightSum="1">
+                    <ImageView
+                        android:id="@+id/remote_tv_play_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@mipmap/ic_remote_tv_play" />
+                    <TextView
+                        android:id="@+id/watch_by_tv"
+                        android:layout_width="122dp"
+                        android:layout_height="484dp"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/remote_controller_viewpager_watch_by_tv"
+                        android:textColor="#ffffff"
+                        android:textSize="14dp" />
+                    <ImageView
+                        android:id="@+id/remote_controller_down"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginStart="117dp"
+                        android:layout_marginTop="13dp"
+                        android:src="@mipmap/remote_controller_arrow_top" />
+                </LinearLayout>
 
-                    <LinearLayout
-                        android:id="@+id/bottom_view_ll"
-                        android:layout_width="match_parent"
-                        android:layout_height="489dp"
-                        android:orientation="horizontal"
-                        android:visibility="visible"
-                        android:weightSum="1">
+                 <LinearLayout
+                     android:id="@+id/top_view_ll"
+                     android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                     android:orientation="vertical"
+                     android:visibility="gone"
+                     android:weightSum="641">
+                     <View
+                         android:layout_width="wrap_content"
+                         android:layout_height="0dp"
+                         android:layout_weight="16" />
 
-                        <ImageView
-                            android:id="@+id/remote_tv_play_icon"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="13dp"
-                            android:layout_marginTop="10dp"
-                            android:src="@mipmap/ic_remote_tv_play" />
+                     <LinearLayout
+                         android:layout_width="match_parent"
+                         android:layout_height="match_parent"
+                         android:orientation="horizontal"
+                         android:weightSum="359">
 
-                        <TextView
-                            android:id="@+id/watch_by_tv"
-                            android:layout_width="122dp"
-                            android:layout_height="484dp"
-                            android:layout_marginStart="13dp"
-                            android:layout_marginTop="16dp"
-                            android:text="@string/remote_controller_viewpager_watch_by_tv"
-                            android:textColor="#ffffff"
-                            android:textSize="14dp" />
+                         <View
+                             android:layout_width="0dp"
+                             android:layout_height="0dp"
+                             android:layout_weight="16" />
 
-                        <ImageView
-                            android:id="@+id/remote_controller_down"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_marginStart="117dp"
-                            android:layout_marginTop="13dp"
-                            android:src="@mipmap/remote_controller_arrow_top" />
-                    </LinearLayout>
+                         <ImageButton
+                             android:id="@+id/remote_controller_iv_power"
+                             android:layout_width="0dp"
+                             android:layout_height="match_parent"
+                             android:layout_gravity="center"
+                             android:layout_weight="52"
+                             android:background="@drawable/color_little_gray"
+                             android:src="@mipmap/remote_controller_power" />
 
-                    <LinearLayout
-                        android:id="@+id/top_view_ll"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:visibility="gone"
-                        android:weightSum="641">
+                         <View
+                             android:layout_width="0dp"
+                             android:layout_height="0dp"
+                             android:layout_weight="245" />
 
-                        <View
-                            android:layout_width="wrap_content"
-                            android:layout_height="0dp"
-                            android:layout_weight="16" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal"
-                            android:weightSum="359">
-
-                            <View
-                                android:layout_width="0dp"
-                                android:layout_height="0dp"
-                                android:layout_weight="16" />
-
-                            <ImageButton
-                                android:id="@+id/remote_controller_iv_power"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:layout_weight="52"
-                                android:background="@drawable/color_little_gray"
-                                android:src="@mipmap/remote_controller_power" />
-
-                            <View
-                                android:layout_width="0dp"
-                                android:layout_height="0dp"
-                                android:layout_weight="245" />
-
-                            <ImageView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="25"
-                                android:src="@mipmap/remote_controller_arrow_bottom" />
-                        </LinearLayout>
-                    </LinearLayout>
-
-                </FrameLayout>
+                         <ImageView
+                             android:layout_width="0dp"
+                             android:layout_height="match_parent"
+                             android:layout_weight="25"
+                             android:src="@mipmap/remote_controller_arrow_bottom" />
+                     </LinearLayout>
+                 </LinearLayout>
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="30dp"
                     android:background="@drawable/color_little_gray">
                 </FrameLayout>
-            </LinearLayout>
+            </RelativeLayout>
             <android.support.v4.view.ViewPager
                 android:id="@+id/remocon_viewpager"
                 android:layout_width="match_parent"
