--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_list_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_list_layout.xml
@@ -15,15 +15,16 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/main_setting_text_start_margin"
+        android:textSize="@dimen/main_setting_list_item_textsize"
         android:textColor="@color/white_text"/>
     <ImageView
         android:id="@+id/setting_forward_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="@dimen/main_setting_view_margin"
-        android:src="@drawable/arrow_right"/>
+        android:src="@mipmap/ic_arrow_right"/>
     <TextView
         android:id="@+id/setting_state_text"
         android:layout_width="wrap_content"
