--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
@@ -48,7 +48,7 @@
             android:layout_centerVertical="true" />
 
         <!-- 仕様通りに表示させるため、一時↓のように構成
-        <com.nttdocomo.android.tvterminalapp.model.program.ChangeModeActionButton
+        <com.nttdocomo.android.tvterminalapp.view.ChangeModeActionButton
             android:id="@+id/recorded_List_filtering_layout_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -64,6 +64,6 @@
                 android:scaleType="fitCenter"
                 android:src="@mipmap/ic_fiber_manual_record_white_24dp"/>
 
-        </com.nttdocomo.android.tvterminalapp.model.program.ChangeModeActionButton>-->
+        </com.nttdocomo.android.tvterminalapp.view.ChangeModeActionButton>-->
     </RelativeLayout>
 </LinearLayout>
