--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/setting_menu_item_main_view.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/setting_menu_item_main_view.xml
@@ -10,4 +10,50 @@
         android:id="@+id/setting_menu_main_webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <RelativeLayout
+        android:id="@+id/webview_function_menu"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_text_layout_high_size"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/backgrand_webview_function_menu" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/launch_function_menu_icon_height"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:gravity="end"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/function_menu_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/launch_function_menu_arrow_margin_end"
+                android:layout_marginTop="@dimen/launch_function_menu_arrow_margin_top" />
+
+            <ImageView
+                android:id="@+id/function_menu_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/launch_function_menu_arrow_margin_end"
+                android:layout_marginTop="@dimen/launch_function_menu_arrow_margin_top" />
+
+            <ImageView
+                android:id="@+id/function_menu_reload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/launch_text_layout_high_size"
+                android:layout_marginTop="@dimen/launch_function_menu_reload_margin_end"
+                android:background="@drawable/icon_webview_function_menu_reload_active" />
+
+        </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
