--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/use_no_paring_dialog_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/use_no_paring_dialog_layout.xml
@@ -15,7 +15,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/launch_stb_text_style"
         android:gravity="center"
         android:paddingStart="@dimen/stb_launch_padding_all"
         android:paddingEnd="@dimen/stb_launch_padding_all"
@@ -30,33 +29,27 @@
         android:orientation="vertical">
         <Button
             android:id="@+id/btn_set_later"
-            android:layout_marginTop="@dimen/stb_launch_btn_divider_margin_top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:background="@drawable/launch_stb_button_style"
             android:text="@string/launch_stb_select_dialog_txt1"
+            android:gravity="center"
             android:textSize="@dimen/stb_launch_text_size"
-            android:textColor="@drawable/launch_text_color_style"/>
+            android:textColor="@drawable/color_black"/>
         <Button
             android:id="@+id/btn_paring_set_not_appear_next_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/stb_launch_btn_divider_margin_top"
-            android:layout_gravity="center_vertical"
-            android:background="@drawable/launch_stb_button_style"
+            android:gravity="center"
             android:text="@string/launch_stb_select_dialog_txt2"
             android:textSize="@dimen/stb_launch_text_size"
-            android:textColor="@drawable/launch_text_color_style" />
+            android:textColor="@drawable/color_black" />
         <Button
+            android:gravity="center"
             android:id="@+id/btn_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="@dimen/stb_launch_btn_divider_margin_top"
-            android:background="@drawable/launch_stb_button_bottom_corner"
             android:text="@string/launch_stb_select_dialog_txt3"
             android:textSize="@dimen/stb_launch_text_size"
-            android:textColor="@drawable/launch_text_color_style" />
+            android:textColor="@drawable/color_black" />
     </LinearLayout>
 </LinearLayout>
