--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
@@ -37,11 +37,33 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true" />
-        <ProgressBar
-            android:id="@+id/record_list_main_layout_progress"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/record_list_main_layout_progress_view"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:orientation="vertical"
+            android:gravity="center">
+            <ProgressBar
+                android:id="@+id/record_list_main_layout_progress"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/record_list_main_layout_loading_word_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:textAlignment="center"
+                android:maxLines="2"
+                android:textSize="@dimen/recorded_contents_text_size_14"
+                android:textStyle="bold"
+                android:textColor="@color/white_text"
+                android:text="@string/record_list_loading_message"
+                android:visibility="gone"/>
+        </LinearLayout>
+
     </RelativeLayout>
 </LinearLayout>
