--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -240,6 +240,7 @@
 
     <!--録画番組-->
     <dimen name="recorded_contents_dividerHeight">1dp</dimen>
+    <dimen name="recorded_contents_text_size_14">14dp</dimen>
 
     <!--タブ共通UI-->
     <dimen name="search_tab_margin_left">16dp</dimen>
